@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.aliyun</groupId>
   <artifactId>microgw20200810</artifactId>
-  <version>1.0.0</version>
+  <version>20201116</version>
   <packaging>jar</packaging>
   <name>microgw20200810</name>
   <description>Alibaba Cloud microgw (20200810) SDK for Java
